--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,4 +1,14 @@
 @import "variables";
+@import "mixins";
+:root {
+  font-size: $base-font-size;
+
+  @if $enable-smooth-scroll {
+    @media (prefers-reduced-motion: no-preference) {
+      scroll-behavior: smooth;
+    }
+  }
+}
 
 *,
 *::before,
@@ -13,13 +23,236 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  color: $link-color;
+  text-decoration: $link-decoration;
+
+  &:hover {
+    color: $link-hover-color;
+    text-decoration: $link-hover-decoration;
+  }
+}
+
+button {
+  // stylelint-disable-next-line property-disallowed-list
+  border-radius: 0;
+}
+
+button,
+[type="button"], // 1
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; // 2
+
+  @if $enable-button-pointers {
+    &:not(:disabled) {
+      cursor: pointer; // 3
+    }
+  }
+}
+
+button:focus:not(:focus-visible) {
+  outline: 0;
+}
+
+input,
+button,
+select,
+optgroup,
+textarea {
+  margin: 0; // 1
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+[role="button"] {
+  cursor: pointer;
+}
+
+select {
+  // Remove the inheritance of word-wrap in Safari.
+  // See https://github.com/twbs/bootstrap/issues/24990
+  word-wrap: normal;
+
+  // Undo the opacity change from Chrome
+  &:disabled {
+    opacity: 1;
+  }
+}
+
+[list]::-webkit-calendar-picker-indicator {
+  display: none;
+}
+
+::-moz-focus-inner {
+  padding: 0;
+  border-style: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
+textarea {
+  resize: vertical; // 1
+}
+
 .container {
   width: 100%;
   max-width: 1680px;
+  padding-left: 6.25vw;
+  padding-right: 6.25vw;
   margin: 0 auto;
+}
+
+.visually-hidden {
+  @include visually-hidden;
+}
+
+.progress {
+  width: 100%;
+  height: 10px;
+  background-color: rgba(0,0,0,.08);
+  border-radius: $border-radius-pill;
+  overflow: hidden;
+
+  &__bar {
+    background: $gradient;
+    height: 100%;
+    border-radius: inherit;
+    transition: width .6s ease;
+  }
+}
+
+.custom-check {
+  display: flex;
+  align-items: center;
+  &__origin {
+    position: absolute;
+    appearance: none;
+  }
+  &__new {
+    width: 1.875rem;
+    height: 1.875rem;
+    border: 1px solid $primary-color;
+    display: inline-block;
+    margin-right: .75rem;
+    position: relative;
+  }
+  &__origin[type=radio] + .custom-check__new {
+    border-radius: $border-radius-pill;
+  }
+  &__origin[type=radio] + .custom-check__new:before {
+    content: "";
+    width: 1rem;
+    height: 1rem;
+    display: block;
+    background-color: transparent;
+    border-radius: inherit;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform .3s linear;
+  }
+  &__origin[type=radio]:checked + .custom-check__new:before {
+    background-color: $primary-color;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__origin[type=checkbox] + .custom-check__new {
+    border-radius: .25rem;
+    transition: all .3s linear;
+  }
+
+  &__origin[type=checkbox]:checked + .custom-check__new {
+    background-color: $primary-color;
+  }
+
+  &__origin[type=checkbox] + .custom-check__new .icon {
+    width: 50%;
+    height: 50%;
+    transform: translate(50%, 50%);
+    fill: transparent;
+  }
+
+  &__origin[type=checkbox]:checked + .custom-check__new .icon {
+    fill: $white;
+  }
+}
+
+.input-field {
+  max-width: 100%;
+  border: 1px solid rgba($black, .1);
+  padding: 1em 2em;
+  border-radius: $border-radius-pill;
+  display: block;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.5;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  appearance: none;
+  box-sizing: border-box;
+  &::placeholder {
+    color: rgba($black, .5);
+  }
+  &:focus {
+    border-color: $primary-color;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba($primary-color, .25);
+  }
+}
+
+.form {
+  &--quiz {
+    padding-top: 1.75rem;
+    padding-left: .875rem;
+    padding-right: .875rem;
+
+    .form__col {
+      max-width: 300px;
+      &--control {
+        max-width: 332px;
+      }
+    }
+  }
+
+  &__row {
+    display: flex;
+    flex-wrap: wrap;
+    & > *:not(:last-of-type) {
+      margin-right: 1.125rem;
+    }
+  }
+  &__btn {
+    .icon {
+      width: 2.25em;
+      transition: all .3s linear;
+      transform: rotate(180deg);
+    }
+    &:hover {
+      .icon {
+        transform: translateX(-0.25rem) rotate(180deg);
+      }
+    }
+  }
+
+  &__helper {
+    display: block;
+    color: rgba($black, .3);
+    margin-top: .75rem;
+    padding-left: 1rem;
+    font-size: .75rem;
+
+    a {
+      text-decoration: underline;
+    }
+  }
 }
